refactor(util): 입력 검증 로직 단순화